clusters/cluster/apps/homeassistant/deployment-homeassistant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostAliases:
        - ip: 127.0.0.1
          hostnames:
            - jellyfin.${cluster_domain}
      terminationGracePeriodSeconds: 10
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: homeassistant
          securityContext:
            privileged: true
            fsGroup: 1000
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          image: ghcr.io/home-assistant/home-assistant:stable
          ports:
            - name: http
              containerPort: 8123
          volumeMounts:
            - name: config-volume
              subPath: homeassistant
              mountPath: /config
            - mountPath: /dev/ttyACM1
              name: zigbee
            - name: dbus
              mountPath: /run/dbus
              readOnly: true
        - name: jellyfin-proxy
          image: nginx:alpine
          ports:
            - containerPort: 18096
              name: jellyfin-proxy
          volumeMounts:
            - name: jellyfin-proxy-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: config-pvc
        - name: ha-config
          configMap:
            name: homeassistant-config
        - name: zigbee
          hostPath:
            path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20220810160716-if00
        - name: dbus
          hostPath:
            path: /run/dbus
            type: Directory
        - name: jellyfin-proxy-config
          configMap:
            name: ha-jellyfin-proxy
