clusters/cluster/apps/homeassistant/service-homeassistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: apps
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      name: http
